# interfacy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  README.md  SKILL.md  exampe2.py  pyproject.toml  requirements.txt  setup.py  stdintest.py
.github/workflows/: python-publish.yml
cliera/: builders.py  cliera.py  function.py  parameter.py  testing_functions.py
docs/: api.md  conf.py  index.md
docs/_static/: custom.css
docs/api/: appearance.md  configuration.md  groups.md  index.md  parsers.md  schema.md  support.md
interfacy/: __init__.py  __init__.pyi  _sort_rule_utils.py  builders.py  class.py  cli.py  cli_parsers.py  command.py  console.py  constants.py  core.py  exceptions.py  executable_flag.py  flag_generator.py  function.py  group.py  help_option_sort.py  help_subcommand_sort.py  interfacy.py  interfacy_class.py  interfacy_function.py  interfacy_parameter.py  logger.py  parameter.py  parsers.py  pipe.py  process_title.py  runner.py  sort_rule_utils.py  testing_functions.py  themes.py  translations.py  type_parsers.py  util.py
interfacy/.agents/skills/interfacy/: SKILL.md
interfacy/.agents/skills/interfacy/agents/: openai.yaml
interfacy/.agents/skills/interfacy/references/: api-patterns.md  structured-parameters.md
interfacy/appearance/: __init__.py  colors.py  help_sort.py  layout.py  layouts.py  renderer.py  type_help.py
interfacy/argparse_backend/: __init__.py  argparser.py  argument_parser.py  help_formatter.py  runner.py  utils.py
interfacy/cli/: __init__.py  builders.py  cli.py  config.py  main.py  parsers.py  themes.py
interfacy/click_backend/: __init__.py  click_parser.py  commands.py  core.py  parser.py  types.py
interfacy/naming/: __init__.py  abbervations.py  abbreviations.py  command_naming.py  flag_strategy.py  name_mapping.py
interfacy/plugins/: __init__.py  base.py
interfacy/schema/: __init__.py  builder.py  model_argument_mapper.py  schema.py  value_plan.py
interfacy/specs/: __init__.py  builder.py  spec.py
interfacy_cli/: __init__.py  argparse_backend.py  argparse_parser.py  argparse_wrappers.py  auto_argparse_parser.py  auto_click_parser.py  auto_parser_core.py  cli.py  click_backend.py  click_parser.py  constants.py  converters.py  core.py  exceptions.py  flag_generator.py  interfacy_class.py  interfacy_function.py  interfacy_parameter.py  logger.py  param_helpstring.py  parser.py  safe_help_formatter.py  testing_functions.py  theme.py  themes.py  type_parser.py  util.py
interfacy_cli/argparse_backend/: __init__.py  argparser.py  argumentparser.py  help_formatter.py  runner.py
interfacy_cli/cli/: __init__.py  cli.py  helpstr_theme.py  parsers.py  themes.py
interfacy_cli/click_backend/: click_parser.py
tests/: abc_list.json  conftest.py  data.py  inputs.py  test_auto_argparser_parser.py  test_auto_argument_parser.py  test_cli_app.py  test_cli_parsers.py  test_click.py  test_cliera.py  test_interfacy_entrypoint.py  test_parser.py  test_pre_commit_config.py
tests/argparse/: test_argument_parser_fromfile.py  test_command_names.py  test_help_rendering_regressions.py  test_interface_contract.py  test_parsing.py  test_runner.py  test_schema_edges.py  test_tab_completion.py
tests/argparse/layout/: test_help_layout_edges.py  test_help_layout_matrix.py  test_help_rendering_regressions.py
tests/argparse/test_types/: test_containers.py  test_legacy_typing.py  test_literal_aliases.py  test_optional_choices.py  test_optionals.py  test_param_kinds.py  test_primitives.py  test_type_aliases.py
tests/cli/: test_main.py
tests/click/: conftest.py  test_click_parity.py  test_import_shims.py
tests/common/: test_async_runner.py  test_command_decorator.py  test_command_group.py  test_config.py  test_executable_flags.py  test_exit_code_paths.py  test_help_command_groups.py  test_help_missing_subcommand.py  test_help_option_sort.py  test_help_subcommand_sort.py  test_interrupt.py  test_layout_samples_execution.py  test_logger.py  test_multi_command.py  test_naming.py  test_parsing.py  test_pipe_execution.py  test_plugins.py  test_process_title.py  test_runner.py  test_runner_varargs.py  test_system_exit_handling.py  test_type_help_tokenization.py  test_type_parsers.py  test_util.py
tests/data/: 12345_one_line.txt  abcd_one_line.txt
tests/schema/: __init__.py  conftest.py  test_list_schema.py  test_model_expansion.py  test_parser_schema.py  test_schema_builder_arguments.py  test_schema_builder_commands.py
tests/specs/: test_parser_spec_builder.py
tests/test_argparse_backend/: test_parsing.py  test_parsing_positional.py  test_runner.py  test_runner_positional.py
