
[project]
name = "interfacy-cli"
version = "0.1.2"
description = ""
authors = [{ name = "Žiga Ivanšek", email = "ziga.ivansek@gmail.com" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nested_argparse==0.1.2",
    "stdl==0.5.4",
    "objinspect==0.2.12",
    "strto==0.1.4",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = [
    "interfacy",
    "cli",
    "command-line",
    "argparse",
    "cli-generator",
    "cli-builder",
    "cli-framework",
]


[project.optional-dependencies]
full = ["argcomplete"]
test = ["pytest"]
dev = ["black", "pytest", "flake8"]

[project.urls]
Repository = "https://github.com/zigai/obj-inspect"

[tool.black]
line-length = 100
target_version = ['py310']

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
extend-ignore = ["E731", "E741", "N802", "N803", "N806", "E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
