
[project]
name = "interfacy"
version = "0.4.0"
description = "CLI framework for building command-line interfaces from Python functions, classes, and class instances"
authors = [{ name = "Žiga Ivanšek", email = "ziga.ivansek@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "stdl>=0.7.0",
    "objinspect>=0.4.1",
    "strto>=0.2.6",
    "tomlkit>=0.12",
    "tomli>=2.0; python_version < '3.11'",
]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed",
]

keywords = [
    "interfacy",
    "cli",
    "command-line",
    "argparse",
    "cli-generator",
    "cli-builder",
    "cli-framework",
    "type-hints",
]

[project.scripts]
interfacy = "interfacy.cli.main:main"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "pre-commit",
    "coverage",
    "mypy",
    "click>=8.3.1",
    "argcomplete",
]
full = ["argcomplete", "click>=8.3.1"]
click = ["click>=8.3.1"]
test = ["pytest", "pytest-mock", "coverage", "click>=8.3.1"]

[project.urls]
Repository = "https://github.com/zigai/interfacy"
Issues = "https://github.com/zigai/interfacy/issues"
Homepage = "https://github.com/zigai/interfacy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interfacy"]

[tool.hatch.envs.test]
features = ["test"]
installer = "uv"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.test.scripts]
test = "pytest {args}"
cov = "coverage run -m pytest {args}"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["interfacy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
]
omit = ["tests/*", "tests/**"]

[tool.mypy]
python_version = "3.10"
files = ["interfacy"]
exclude = ["^tests/"]

disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
strict_equality = true
ignore_missing_imports = true

[tool.codespell]
skip = '.git,uv.lock'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ERA",
    "FBT002",
    "COM",
    "CPY",
    "DJ",
    "ANN003",
    "FIX",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D205",
    "D203",
    "D212",
    "E501",
    "PIE804",
    "S101",
    "EM101",
    "PYI041",
    "PYI051",
    "PYI046",
    "PYI047",
    "PYI049",
    "PYI053",
    "PYI054",
    "RET501",
    "SIM910",
    "N812",
    "PLC0415",
    "PLR0904",
    "PLR0913",
    "PLR2004",
    "PLR1711",
    "TRY003",
    "T20",
    "SIM105",
    "RET504",
    "PLR0912",
    "PLR0915",
    "SIM105",
    "TD",
    "TC001",
    "TC002",
    "TC003",
    "TC006",
    "PLW0603",
    "EM102",
    "PLW2901",
    "RSE102",
    "PGH004",
    "N806",
    "FBT001",
]
exclude = ["build"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # Unused import
    "E402", # Module import not at top of file
]
"interfacy/argparse_backend/argument_parser.py" = [
    "C901", # argparse-derived internals with targeted patches
]
"interfacy/argparse_backend/help_formatter.py" = [
    "C901", # argparse-derived internals with targeted patches
]
"interfacy/appearance/layout.py" = [
    "RUF009", # stdl.TextStyle is immutable (frozen dataclass); direct defaults are intentional
]
"interfacy/appearance/colors.py" = [
    "RUF009", # stdl.TextStyle is immutable (frozen dataclass); direct defaults are intentional
]
"interfacy/appearance/layouts.py" = [
    "RUF009", # stdl.TextStyle is immutable (frozen dataclass); direct defaults are intentional
]
"tests/conftest.py" = [
    "UP006", # intentional legacy typing.List/Dict coverage
    "UP007", # intentional legacy typing.Union coverage
    "UP035", # intentional imports from typing for legacy coverage
    "UP045", # intentional Optional[T] legacy coverage
]
"**/tests/**/*.py" = [
    "S104",
    "S105",
    "S106",
    "TRY004",
    "RUF003",
    "RUF012",
    "UP031",
    "SLF001",
    "ARG",
    "N806",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN401",
    "S",
    "SLF001",
    "INP001",
    "PLW0108",
    "EM102",
    "FBT001",
    "SIM300",
    "FLY002",
    "A002",
    "A004",
]
"examples/*.py" = ["INP001"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.validator",
    "declared_attr",
    "expression",
    "comparator",
]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["id", "input"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "sqlalchemy.orm.DeclarativeBase",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["interfacy", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"
